--- a/src/app/auth/login/login.component.css
+++ b/src/app/auth/login/login.component.css
@@ -1,6 +1,6 @@
 body {
-  background: url('/assets/images/login.png') no-repeat center center fixed;
-  background-size: cover;
+  /* background: url('/assets/images/login.png') no-repeat center center fixed;
+  background-size: cover; */
 }
 
 
