--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -6,10 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Styled Login Form</title>
   <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/tailwind.min.css" rel="stylesheet">
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-<div class="container page-holder d-flex justify-content-center align-items-center vh-100">
+<body style="background: linear-gradient(to right, #4141a7, #00ffff);">
+  
+<div class="container page-holder d-flex justify-content-center align-items-center vh-100 ">
   <div class="card shadow-sm p-4 mb-5 bg-body rounded" style="width: 30rem;">
     <div class="card-body">
       <h3 class="card-title text-center mb-4">Sign In</h3>
