--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-body-tertiary" style="height: 70px;">
+<nav class="navbar navbar-expand-lg navbar-light  custom-navbar-bg" style="height: 70px; ">
   <!-- Container wrapper -->
   <div class="container-fluid">
     <!-- Toggle button -->
@@ -21,52 +21,25 @@
       <img class="navbar-logo me-3" src="assets/images/pet.png" alt="Pets Ecommerce Logo" />
     
       <!-- Left links -->
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0 d-flex align-items-center">
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/dashboard']"> <h5>Pets Ecommerce</h5></a>
+          <a class="nav-link d-flex align-items-center" [routerLink]="['/dashboard']">
+            <h5 class="mb-0" style="font-size: 20px;">Pets Ecommerce</h5>
+          </a>
         </li>
       </ul>
     </div>
     
-  
-
     <!-- Right elements -->
     <div class="d-flex align-items-center">
-    
-      <!-- Avatar -->
-      <div class="dropdown">
-        <a
-          class="dropdown-toggle d-flex align-items-center hidden-arrow"
-          [routerLink]="['/profile']"
-          id="navbarDropdownMenuAvatar"
-          role="button"
-          aria-expanded="false"
-          (click)="toggleDropdown()"
-        >
-          <i class="fas fa-user-circle text-secondary"></i>
-        </a>
-        <ul
-          class="dropdown-menu dropdown-menu-end dropdown-menu-lg-start"
-          aria-labelledby="navbarDropdownMenuAvatar"
-          [ngClass]="{ 'show': isDropdownOpen }"
-        >
-          <li>
-            <a class="dropdown-item" [routerLink]="['/profile']">My profile</a>
-          </li>
-          <li>
-            <a class="dropdown-item" [routerLink]="['/settings']">Settings</a>
-          </li>
-          <li>
-            <a class="dropdown-item" [routerLink]="['/logout']">Logout</a>
-          </li>
-          <li><hr class="dropdown-divider"></li>
-          <li>
-            <a class="dropdown-item" [routerLink]="['/login']">Sign In</a>
-          </li>
-          <li>
-            <a class="dropdown-item" [routerLink]="['/register']">Register</a>
-          </li>
-        </ul>
+      <!-- User Info -->
+      <div class="d-flex align-items-center me-3 user-info">
+        <img src="assets/images/profil.jpg" alt="User Avatar" class="user-avatar">
+        <div class="ms-2">
+          <span class="user-name">JD</span>
+          <br>
+          <span class="user-role">Admin</span>
+        </div>
       </div>
     </div>
     <!-- Right elements -->
@@ -74,3 +47,5 @@
   <!-- Container wrapper -->
 </nav>
 <!-- Navbar -->
+
+
