--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -9,7 +9,7 @@
             </svg>
         </div>
         <div class="flex-grow flex flex-col ml-4" style="width: 200px;">
-            <span class="text-xl font-bold">{{ totalUsers }}</span>
+            <span class="text-xl font-bold">{{ displayedUsers }}</span>
             <div class="flex items-center justify-between">
                 <span class="text-gray-500">Total Users</span>
             </div>
@@ -23,7 +23,7 @@
             </svg>
         </div>
         <div class="flex-grow flex flex-col ml-4" style="width: 200px;">
-            <span class="text-xl font-bold">{{totalOrders}}</span>
+            <span class="text-xl font-bold">{{displayedOrders}}</span>
             <div class="flex items-center justify-between">
                 <span class="text-gray-500">Total Orders</span>
             </div>
@@ -37,7 +37,7 @@
             </svg>
         </div>
         <div class="flex-grow flex flex-col ml-4" style="width: 200px;">
-            <span class="text-xl font-bold">{{totalProducts}}</span>
+            <span class="text-xl font-bold">{{displayedProducts}}</span>
             <div class="flex items-center justify-between">
                 <span class="text-gray-500">Total Products</span>
             </div>
